parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE
    FALSE
    TRUE
    UMINUS

Grammar

Rule 0     S' -> programa
Rule 1     programa -> stmt_list
Rule 2     stmt_list -> stmt_list statement
Rule 3     stmt_list -> <empty>
Rule 4     statement -> BOM_DIA
Rule 5     statement -> BOA_TARDE
Rule 6     statement -> BOA_NOITE
Rule 7     statement -> FUNCTION ID LPAREN param_list RPAREN LBRACE stmt_list RBRACE SEMI
Rule 8     statement -> RETURN expr SEMI
Rule 9     statement -> IF LPAREN expr RPAREN LBRACE stmt_list RBRACE
Rule 10    statement -> WHILE LPAREN expr RPAREN LBRACE stmt_list RBRACE
Rule 11    statement -> expr SEMI
Rule 12    param_list -> <empty>
Rule 13    param_list -> ID
Rule 14    param_list -> param_list COMMA ID
Rule 15    arg_list -> <empty>
Rule 16    arg_list -> expr
Rule 17    arg_list -> arg_list COMMA expr
Rule 18    expr -> ID ASSIGN expr
Rule 19    expr -> expr PLUS expr
Rule 20    expr -> expr MINUS expr
Rule 21    expr -> expr MUL expr
Rule 22    expr -> expr DIV expr
Rule 23    expr -> expr GE expr
Rule 24    expr -> expr LE expr
Rule 25    expr -> expr GT expr
Rule 26    expr -> expr LT expr
Rule 27    expr -> expr EQ expr
Rule 28    expr -> expr NE expr
Rule 29    expr -> MINUS expr
Rule 30    expr -> LPAREN expr RPAREN
Rule 31    expr -> NUMBER
Rule 32    expr -> ID LPAREN arg_list RPAREN
Rule 33    expr -> ID

Terminals, with rules where they appear

ASSIGN               : 18
BOA_NOITE            : 6
BOA_TARDE            : 5
BOM_DIA              : 4
COMMA                : 14 17
DIV                  : 22
ELSE                 : 
EQ                   : 27
FALSE                : 
FUNCTION             : 7
GE                   : 23
GT                   : 25
ID                   : 7 13 14 18 32 33
IF                   : 9
LBRACE               : 7 9 10
LE                   : 24
LPAREN               : 7 9 10 30 32
LT                   : 26
MINUS                : 20 29
MUL                  : 21
NE                   : 28
NUMBER               : 31
PLUS                 : 19
RBRACE               : 7 9 10
RETURN               : 8
RPAREN               : 7 9 10 30 32
SEMI                 : 7 8 11
TRUE                 : 
UMINUS               : 
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

arg_list             : 17 32
expr                 : 8 9 10 11 16 17 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 30
param_list           : 7 14
programa             : 0
statement            : 2
stmt_list            : 1 2 7 9 10

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . stmt_list
    (2) stmt_list -> . stmt_list statement
    (3) stmt_list -> .

    BOM_DIA         reduce using rule 3 (stmt_list -> .)
    BOA_TARDE       reduce using rule 3 (stmt_list -> .)
    BOA_NOITE       reduce using rule 3 (stmt_list -> .)
    FUNCTION        reduce using rule 3 (stmt_list -> .)
    RETURN          reduce using rule 3 (stmt_list -> .)
    IF              reduce using rule 3 (stmt_list -> .)
    WHILE           reduce using rule 3 (stmt_list -> .)
    ID              reduce using rule 3 (stmt_list -> .)
    MINUS           reduce using rule 3 (stmt_list -> .)
    LPAREN          reduce using rule 3 (stmt_list -> .)
    NUMBER          reduce using rule 3 (stmt_list -> .)
    $end            reduce using rule 3 (stmt_list -> .)

    programa                       shift and go to state 1
    stmt_list                      shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> stmt_list .
    (2) stmt_list -> stmt_list . statement
    (4) statement -> . BOM_DIA
    (5) statement -> . BOA_TARDE
    (6) statement -> . BOA_NOITE
    (7) statement -> . FUNCTION ID LPAREN param_list RPAREN LBRACE stmt_list RBRACE SEMI
    (8) statement -> . RETURN expr SEMI
    (9) statement -> . IF LPAREN expr RPAREN LBRACE stmt_list RBRACE
    (10) statement -> . WHILE LPAREN expr RPAREN LBRACE stmt_list RBRACE
    (11) statement -> . expr SEMI
    (18) expr -> . ID ASSIGN expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr MUL expr
    (22) expr -> . expr DIV expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LT expr
    (27) expr -> . expr EQ expr
    (28) expr -> . expr NE expr
    (29) expr -> . MINUS expr
    (30) expr -> . LPAREN expr RPAREN
    (31) expr -> . NUMBER
    (32) expr -> . ID LPAREN arg_list RPAREN
    (33) expr -> . ID

    $end            reduce using rule 1 (programa -> stmt_list .)
    BOM_DIA         shift and go to state 4
    BOA_TARDE       shift and go to state 5
    BOA_NOITE       shift and go to state 6
    FUNCTION        shift and go to state 7
    RETURN          shift and go to state 10
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    ID              shift and go to state 8
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 15

    statement                      shift and go to state 3
    expr                           shift and go to state 11

state 3

    (2) stmt_list -> stmt_list statement .

    BOM_DIA         reduce using rule 2 (stmt_list -> stmt_list statement .)
    BOA_TARDE       reduce using rule 2 (stmt_list -> stmt_list statement .)
    BOA_NOITE       reduce using rule 2 (stmt_list -> stmt_list statement .)
    FUNCTION        reduce using rule 2 (stmt_list -> stmt_list statement .)
    RETURN          reduce using rule 2 (stmt_list -> stmt_list statement .)
    IF              reduce using rule 2 (stmt_list -> stmt_list statement .)
    WHILE           reduce using rule 2 (stmt_list -> stmt_list statement .)
    ID              reduce using rule 2 (stmt_list -> stmt_list statement .)
    MINUS           reduce using rule 2 (stmt_list -> stmt_list statement .)
    LPAREN          reduce using rule 2 (stmt_list -> stmt_list statement .)
    NUMBER          reduce using rule 2 (stmt_list -> stmt_list statement .)
    $end            reduce using rule 2 (stmt_list -> stmt_list statement .)
    RBRACE          reduce using rule 2 (stmt_list -> stmt_list statement .)


state 4

    (4) statement -> BOM_DIA .

    BOM_DIA         reduce using rule 4 (statement -> BOM_DIA .)
    BOA_TARDE       reduce using rule 4 (statement -> BOM_DIA .)
    BOA_NOITE       reduce using rule 4 (statement -> BOM_DIA .)
    FUNCTION        reduce using rule 4 (statement -> BOM_DIA .)
    RETURN          reduce using rule 4 (statement -> BOM_DIA .)
    IF              reduce using rule 4 (statement -> BOM_DIA .)
    WHILE           reduce using rule 4 (statement -> BOM_DIA .)
    ID              reduce using rule 4 (statement -> BOM_DIA .)
    MINUS           reduce using rule 4 (statement -> BOM_DIA .)
    LPAREN          reduce using rule 4 (statement -> BOM_DIA .)
    NUMBER          reduce using rule 4 (statement -> BOM_DIA .)
    $end            reduce using rule 4 (statement -> BOM_DIA .)
    RBRACE          reduce using rule 4 (statement -> BOM_DIA .)


state 5

    (5) statement -> BOA_TARDE .

    BOM_DIA         reduce using rule 5 (statement -> BOA_TARDE .)
    BOA_TARDE       reduce using rule 5 (statement -> BOA_TARDE .)
    BOA_NOITE       reduce using rule 5 (statement -> BOA_TARDE .)
    FUNCTION        reduce using rule 5 (statement -> BOA_TARDE .)
    RETURN          reduce using rule 5 (statement -> BOA_TARDE .)
    IF              reduce using rule 5 (statement -> BOA_TARDE .)
    WHILE           reduce using rule 5 (statement -> BOA_TARDE .)
    ID              reduce using rule 5 (statement -> BOA_TARDE .)
    MINUS           reduce using rule 5 (statement -> BOA_TARDE .)
    LPAREN          reduce using rule 5 (statement -> BOA_TARDE .)
    NUMBER          reduce using rule 5 (statement -> BOA_TARDE .)
    $end            reduce using rule 5 (statement -> BOA_TARDE .)
    RBRACE          reduce using rule 5 (statement -> BOA_TARDE .)


state 6

    (6) statement -> BOA_NOITE .

    BOM_DIA         reduce using rule 6 (statement -> BOA_NOITE .)
    BOA_TARDE       reduce using rule 6 (statement -> BOA_NOITE .)
    BOA_NOITE       reduce using rule 6 (statement -> BOA_NOITE .)
    FUNCTION        reduce using rule 6 (statement -> BOA_NOITE .)
    RETURN          reduce using rule 6 (statement -> BOA_NOITE .)
    IF              reduce using rule 6 (statement -> BOA_NOITE .)
    WHILE           reduce using rule 6 (statement -> BOA_NOITE .)
    ID              reduce using rule 6 (statement -> BOA_NOITE .)
    MINUS           reduce using rule 6 (statement -> BOA_NOITE .)
    LPAREN          reduce using rule 6 (statement -> BOA_NOITE .)
    NUMBER          reduce using rule 6 (statement -> BOA_NOITE .)
    $end            reduce using rule 6 (statement -> BOA_NOITE .)
    RBRACE          reduce using rule 6 (statement -> BOA_NOITE .)


state 7

    (7) statement -> FUNCTION . ID LPAREN param_list RPAREN LBRACE stmt_list RBRACE SEMI

    ID              shift and go to state 16


state 8

    (18) expr -> ID . ASSIGN expr
    (32) expr -> ID . LPAREN arg_list RPAREN
    (33) expr -> ID .

    ASSIGN          shift and go to state 17
    LPAREN          shift and go to state 18
    SEMI            reduce using rule 33 (expr -> ID .)
    PLUS            reduce using rule 33 (expr -> ID .)
    MINUS           reduce using rule 33 (expr -> ID .)
    MUL             reduce using rule 33 (expr -> ID .)
    DIV             reduce using rule 33 (expr -> ID .)
    GE              reduce using rule 33 (expr -> ID .)
    LE              reduce using rule 33 (expr -> ID .)
    GT              reduce using rule 33 (expr -> ID .)
    LT              reduce using rule 33 (expr -> ID .)
    EQ              reduce using rule 33 (expr -> ID .)
    NE              reduce using rule 33 (expr -> ID .)
    RPAREN          reduce using rule 33 (expr -> ID .)
    COMMA           reduce using rule 33 (expr -> ID .)


state 9

    (30) expr -> LPAREN . expr RPAREN
    (18) expr -> . ID ASSIGN expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr MUL expr
    (22) expr -> . expr DIV expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LT expr
    (27) expr -> . expr EQ expr
    (28) expr -> . expr NE expr
    (29) expr -> . MINUS expr
    (30) expr -> . LPAREN expr RPAREN
    (31) expr -> . NUMBER
    (32) expr -> . ID LPAREN arg_list RPAREN
    (33) expr -> . ID

    ID              shift and go to state 8
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 15

    expr                           shift and go to state 19

state 10

    (8) statement -> RETURN . expr SEMI
    (18) expr -> . ID ASSIGN expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr MUL expr
    (22) expr -> . expr DIV expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LT expr
    (27) expr -> . expr EQ expr
    (28) expr -> . expr NE expr
    (29) expr -> . MINUS expr
    (30) expr -> . LPAREN expr RPAREN
    (31) expr -> . NUMBER
    (32) expr -> . ID LPAREN arg_list RPAREN
    (33) expr -> . ID

    ID              shift and go to state 8
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 15

    expr                           shift and go to state 20

state 11

    (11) statement -> expr . SEMI
    (19) expr -> expr . PLUS expr
    (20) expr -> expr . MINUS expr
    (21) expr -> expr . MUL expr
    (22) expr -> expr . DIV expr
    (23) expr -> expr . GE expr
    (24) expr -> expr . LE expr
    (25) expr -> expr . GT expr
    (26) expr -> expr . LT expr
    (27) expr -> expr . EQ expr
    (28) expr -> expr . NE expr

    SEMI            shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    MUL             shift and go to state 24
    DIV             shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    EQ              shift and go to state 30
    NE              shift and go to state 31


state 12

    (9) statement -> IF . LPAREN expr RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 32


state 13

    (10) statement -> WHILE . LPAREN expr RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 33


state 14

    (29) expr -> MINUS . expr
    (18) expr -> . ID ASSIGN expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr MUL expr
    (22) expr -> . expr DIV expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LT expr
    (27) expr -> . expr EQ expr
    (28) expr -> . expr NE expr
    (29) expr -> . MINUS expr
    (30) expr -> . LPAREN expr RPAREN
    (31) expr -> . NUMBER
    (32) expr -> . ID LPAREN arg_list RPAREN
    (33) expr -> . ID

    ID              shift and go to state 8
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 15

    expr                           shift and go to state 34

state 15

    (31) expr -> NUMBER .

    SEMI            reduce using rule 31 (expr -> NUMBER .)
    PLUS            reduce using rule 31 (expr -> NUMBER .)
    MINUS           reduce using rule 31 (expr -> NUMBER .)
    MUL             reduce using rule 31 (expr -> NUMBER .)
    DIV             reduce using rule 31 (expr -> NUMBER .)
    GE              reduce using rule 31 (expr -> NUMBER .)
    LE              reduce using rule 31 (expr -> NUMBER .)
    GT              reduce using rule 31 (expr -> NUMBER .)
    LT              reduce using rule 31 (expr -> NUMBER .)
    EQ              reduce using rule 31 (expr -> NUMBER .)
    NE              reduce using rule 31 (expr -> NUMBER .)
    RPAREN          reduce using rule 31 (expr -> NUMBER .)
    COMMA           reduce using rule 31 (expr -> NUMBER .)


state 16

    (7) statement -> FUNCTION ID . LPAREN param_list RPAREN LBRACE stmt_list RBRACE SEMI

    LPAREN          shift and go to state 35


state 17

    (18) expr -> ID ASSIGN . expr
    (18) expr -> . ID ASSIGN expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr MUL expr
    (22) expr -> . expr DIV expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LT expr
    (27) expr -> . expr EQ expr
    (28) expr -> . expr NE expr
    (29) expr -> . MINUS expr
    (30) expr -> . LPAREN expr RPAREN
    (31) expr -> . NUMBER
    (32) expr -> . ID LPAREN arg_list RPAREN
    (33) expr -> . ID

    ID              shift and go to state 8
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 15

    expr                           shift and go to state 36

state 18

    (32) expr -> ID LPAREN . arg_list RPAREN
    (15) arg_list -> .
    (16) arg_list -> . expr
    (17) arg_list -> . arg_list COMMA expr
    (18) expr -> . ID ASSIGN expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr MUL expr
    (22) expr -> . expr DIV expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LT expr
    (27) expr -> . expr EQ expr
    (28) expr -> . expr NE expr
    (29) expr -> . MINUS expr
    (30) expr -> . LPAREN expr RPAREN
    (31) expr -> . NUMBER
    (32) expr -> . ID LPAREN arg_list RPAREN
    (33) expr -> . ID

    RPAREN          reduce using rule 15 (arg_list -> .)
    COMMA           reduce using rule 15 (arg_list -> .)
    ID              shift and go to state 8
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 15

    arg_list                       shift and go to state 37
    expr                           shift and go to state 38

state 19

    (30) expr -> LPAREN expr . RPAREN
    (19) expr -> expr . PLUS expr
    (20) expr -> expr . MINUS expr
    (21) expr -> expr . MUL expr
    (22) expr -> expr . DIV expr
    (23) expr -> expr . GE expr
    (24) expr -> expr . LE expr
    (25) expr -> expr . GT expr
    (26) expr -> expr . LT expr
    (27) expr -> expr . EQ expr
    (28) expr -> expr . NE expr

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    MUL             shift and go to state 24
    DIV             shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    EQ              shift and go to state 30
    NE              shift and go to state 31


state 20

    (8) statement -> RETURN expr . SEMI
    (19) expr -> expr . PLUS expr
    (20) expr -> expr . MINUS expr
    (21) expr -> expr . MUL expr
    (22) expr -> expr . DIV expr
    (23) expr -> expr . GE expr
    (24) expr -> expr . LE expr
    (25) expr -> expr . GT expr
    (26) expr -> expr . LT expr
    (27) expr -> expr . EQ expr
    (28) expr -> expr . NE expr

    SEMI            shift and go to state 40
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    MUL             shift and go to state 24
    DIV             shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    EQ              shift and go to state 30
    NE              shift and go to state 31


state 21

    (11) statement -> expr SEMI .

    BOM_DIA         reduce using rule 11 (statement -> expr SEMI .)
    BOA_TARDE       reduce using rule 11 (statement -> expr SEMI .)
    BOA_NOITE       reduce using rule 11 (statement -> expr SEMI .)
    FUNCTION        reduce using rule 11 (statement -> expr SEMI .)
    RETURN          reduce using rule 11 (statement -> expr SEMI .)
    IF              reduce using rule 11 (statement -> expr SEMI .)
    WHILE           reduce using rule 11 (statement -> expr SEMI .)
    ID              reduce using rule 11 (statement -> expr SEMI .)
    MINUS           reduce using rule 11 (statement -> expr SEMI .)
    LPAREN          reduce using rule 11 (statement -> expr SEMI .)
    NUMBER          reduce using rule 11 (statement -> expr SEMI .)
    $end            reduce using rule 11 (statement -> expr SEMI .)
    RBRACE          reduce using rule 11 (statement -> expr SEMI .)


state 22

    (19) expr -> expr PLUS . expr
    (18) expr -> . ID ASSIGN expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr MUL expr
    (22) expr -> . expr DIV expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LE expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LT expr
    (27) expr -> . expr EQ expr
    (28) expr -> . expr NE expr
    (29) expr -> . MINUS expr
    (30) expr -> . LPAREN expr RPAREN
    (31) expr -> . NUMBER
    (32) expr -> . ID LPAREN arg_list RPAREN
    (33) expr -> . ID

    ID              shift and go to state 8
    MINUS           shift and go to state 14
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 15

    expr                           shift and go to state 41

state 23
